--- a/my-project2/frontend/src/app/component/overlay/overlay.component.html
+++ b/my-project2/frontend/src/app/component/overlay/overlay.component.html
@@ -4,7 +4,7 @@
     <a href="http://localhost:4200/search">의류 검색쿠</a>
   </div>
   <div class="section bottom">
-    <a href="http://localhost:4200/fitting">가상 피팅</a>
+    <a [routerLink]="['/fitting']">가상 피팅</a>
   </div>
   <button class="close-button" (click)="hideOverlay()">X</button>
   <!--<div class="search-container" *ngIf="isSearchVisible">
