--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
@@ -14,7 +14,7 @@
       <div class="title">옷 선택</div>
       <div class="image">
         <input type="file" id="clothesInput" style="display: none;" (change)="handleImageChange($event, 'clothesPreview', 'clothesImg','clothesInput')">
-        <img class="preview" id="clothesPreview" src='/assets/clothesSample.png' alt="의상 이미지" style="width: 100%;>
+        <img class="preview" id="clothesPreview" src='/assets/clothesSample.png' alt="의상 이미지" style="width: 100%;">
       </div>
       <div id="btn_group">
         <button class="buttonSet" (click)="imageInput('clothesInput')">이미지 불러오기</button>
