--- a/my-project2/frontend/src/app/component/search/search.component.css
+++ b/my-project2/frontend/src/app/component/search/search.component.css
@@ -25,6 +25,7 @@ select:focus{
 }
 
 .search-box {
+  width: 100%;
   margin-top: 30px;
   display: flex;
   justify-content: center;
@@ -42,7 +43,8 @@ select:focus{
   height: 50px;
 }
 .searchInput {
-  width: 1000px;
+  width: 70%;
+  /*width: 1000px;*/
   height: 30px;
   font-size: 18px;
   border: none;
