--- a/my-project2/frontend/src/app/app.component.html
+++ b/my-project2/frontend/src/app/app.component.html
@@ -9,10 +9,10 @@
           <mat-icon class="icon">home</mat-icon>
           <span class="label2">홈</span>
         </a>
-        <a mat-list-item [routerLink]="['/']" routerLinkActive="router-link-active">
-          <span class="label2">아바타</span>
+        <a mat-list-item [routerLink]="['/fitting']" routerLinkActive="router-link-active">
+          <span class="label2">가상 피팅</span>
         </a>
-        <a mat-list-item [routerLink]="['/signin']" routerLinkActive="router-link-active" *ngIf="!signService.isSignIn()">
+        <a mat-list-item [routerLink]="['/signin']" routerLinkActive="router-link-active" *ngIf="!(signService.username | async)">
           <mat-icon class="icon">input</mat-icon>
           <span class="label2">로그인</span>
         </a>
@@ -20,17 +20,13 @@
           <mat-icon class="icon">input</mat-icon>
           <span class="label2">회원가입</span>
         </a>
-        <a mat-list-item [routerLink]="['/myinfo']" routerLinkActive="router-link-active"> <!--*ngIf="signService.isSignIn()"-->
+        <a mat-list-item [routerLink]="['/closet']" routerLinkActive="router-link-active" *ngIf="(signService.username | async) as username">
           <mat-icon class="icon">person</mat-icon>
-          <span class="label2">내정보</span>
+          <span class="label2"> {{ username || '사용자' }} </span>
         </a>
-        <a mat-list-item *ngIf="signService.isSignIn()" href="/logout">
+        <a (click)="signService.logout()" mat-list-item *ngIf="(signService.username | async)" >
           <mat-icon class="icon">input</mat-icon>
           <span class="label2">로그아웃</span>
-        </a>
-        ----------------------------
-        <a mat-list-item>
-          <span class="label2">카테고리 들어갈 자리</span>
         </a>
       </mat-nav-list>
     </mat-sidenav>
@@ -72,18 +68,6 @@
                 <span class="label1">로그인</span>
               </a>
             </li>
-
-
-            <!--<li *ngIf="!signService.isSignIn()">
-              <a [routerLink]="['/signin']">
-                <mat-icon class="icon">input</mat-icon>
-                <span class="label1">로그인</span>
-              </a>
-              <a mat-list-item *ngIf="signService.isSignIn()" href="/logout">
-                <mat-icon class="icon">input</mat-icon>
-                <span class="label2">{{ signService. }}</span>
-              </a>
-            </li>-->
           </ul>
         </div>
       </mat-toolbar>
