--- a/my-project2/frontend/src/app/component/member/closet/closet.component.html
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.html
@@ -10,8 +10,8 @@
         <!-- Post title -->
         <h2 class="title1">{{ post.title }}</h2>
         <div class="button-group">
-          <button (click)="openUpdateForm(post)">게시물 수정하기</button>
-          <button (click)="deletePost(post.id)">게시물 삭제하기</button>
+          <button (click)="openUpdateForm(post)">수정하기</button>
+          <button (click)="deletePost(post.id)">삭제하기</button>
         </div>
       </div>
       <div *ngIf="updateFormOpened && selectedPost.id === post.id">
