--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.css
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.css
@@ -175,11 +175,12 @@ footer{
   justify-content: center;
   align-content: flex-start;
   width: 100%;
+  height: auto;
 }
 
 .boxes-wrapper .box {
-  flex: 0 0 calc(19% - 10px);
-  max-width: calc(19% - 20px);
+  flex: 0 0 calc(33% - 10px);
+  max-width: calc(28% - 10px);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
