--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
@@ -1,20 +1,20 @@
 <div class="container">
   <div class="row input-div">
-    <div class="image-box col-sm-12 col-xl-6">
+    <div class="image-box col-6 col-xl-6">
       <div class="title">모델 선택</div>
-      <div class="image">
+      <div class="image" style="width: 100%; height: auto;">
         <input type="file" id="modelInput" style="display: none;" (change)="handleImageChange($event, 'modelPreview', 'modelImg','modelInput')">
-        <img class="preview" id="modelPreview" src='/assets/modelSample.png' alt="모델 예시 이미지 " style="width: 100%; height: 500px;">
+        <img class="preview" id="modelPreview" src='/assets/modelSample.png' alt="모델 예시 이미지 " style="width: 100%; height: auto; max-width: 300px; max-height: 300px;">
       </div>
       <div id="btn_group">
         <button class="buttonSet" (click)="imageInput('modelInput')">이미지 불러오기</button>
       </div>
     </div>
-    <div class="image-box col-sm-12 col-xl-6">
+    <div class="image-box col-6 col-xl-6">
       <div class="title">옷 선택</div>
-      <div class="image">
+      <div class="image" style="width: 100%; height: auto;">
         <input type="file" id="clothesInput" style="display: none;" (change)="handleImageChange($event, 'clothesPreview', 'clothesImg','clothesInput')">
-        <img class="preview" id="clothesPreview" src='/assets/clothesSample.png' alt="의상 이미지" style="width: 100%; height: 500px;">
+        <img class="preview" id="clothesPreview" src='/assets/clothesSample.png' alt="의상 이미지" style="width: 100%; height: auto; max-width: 300px; max-height: 300px;">
       </div>
       <div id="btn_group">
         <button class="buttonSet" (click)="imageInput('clothesInput')">이미지 불러오기</button>
