--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.css
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.css
@@ -8,6 +8,7 @@
 .title{
   font-size: large;
   text-align: center;
+  font-weight: bold;
 }
 
 h2{
@@ -179,6 +180,7 @@ footer{
   row-gap: 40px;
   justify-content: center;
   align-content: flex-start;
+  text-align: left;
   width: 100%;
   height: auto;
 }
@@ -190,6 +192,7 @@ footer{
   flex-direction: column;
   align-items: flex-start;
   position: relative;
+  align-items: stretch;
 }
 
 
@@ -207,7 +210,7 @@ footer{
 
 .box img {
   width: 100%;
-  height: 250px;
+  height: auto;
 }
 
 .box_avatar{
