--- a/my-project2/frontend/src/app/component/member/closet/closet.component.html
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.html
@@ -53,19 +53,13 @@
 <div class="boxes-wrapper">
   <ng-container *ngFor="let item of closetItems">
     <div class="box">
-      <img [src]="item.imageUrl" alt="{{item.name}}의 이미지" class="item-image">
-      <br>
-      <div class="detail">
-        <div style="font-weight: bold" class="name">
-          {{ item.name }}
+        <img [src]="item.imageUrl" alt="{{item.name}}의 이미지" class="item-image">
+        <br>
+        <div class="detail">
+          <div style="font-weight: bold" class="name">{{ item.name }}</div>
+          <div class="brandName">{{ item.brand }}</div>
+          <div class="price">{{ item.price | number }}원</div>
         </div>
-        <div class="brandName">
-          {{ item.brand }}
-        </div>
-        <div class="price">
-          {{ item.price | number }}원
-        </div>
-      </div>
       <button (click)="removeItem(item.id)">삭제</button>
     </div>
   </ng-container>
