--- a/my-project2/frontend/src/app/component/member/closet/closet.component.css
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.css
@@ -176,7 +176,6 @@ footer{
 }
 
 .boxes-wrapper {
-  margin-top: 10px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 20px;
@@ -184,6 +183,8 @@ footer{
   justify-content: center;
   align-content: flex-start;
   width: 100%;
+  height: auto;
+  margin-top: 10px;
 }
 
 .boxes-wrapper .box {
@@ -193,6 +194,10 @@ footer{
   flex-direction: column;
   align-items: flex-start;
   position: relative;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* 기존 .box, .box_avatar, .brandName, .name 클래스는 동일하게 유지 */
@@ -236,9 +241,8 @@ footer{
   cursor: pointer;
 }
 
-.box .brandName,
-.box .name,
-.box .price{
+.box .detail .brandName,
+.box .detail .name{
   max-width: 100%; /* 박스의 가로 크기에 맞춰서 max-width 설정 */
   text-align: left;
   overflow-wrap: break-word; /* 줄바꿈 */
@@ -246,7 +250,6 @@ footer{
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-left: 5px;
 }
 
 .box .detail{
