--- a/my-project2/frontend/src/custom-theme.scss
+++ b/my-project2/frontend/src/custom-theme.scss
@@ -25,8 +25,12 @@ $frontend-theme: mat.define-light-theme((
     primary: $frontend-primary,
     accent: $frontend-accent,
     warn: $frontend-warn,
+  ),
+  background: (
+    default: white
   )
 ));
+
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
