--- a/my-project2/frontend/src/app/component/member/closet/closet.component.css
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.css
@@ -373,6 +373,20 @@ h1{
   position: relative;
 }
 
+@media (max-width: 767px) {
+  .button-group {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .button-group button {
+    margin-top: 10px; /* 버튼 간격 조절 */
+    width: auto; /* 버튼 너비 자동 조정 */
+    height: auto; /* 버튼 높이 자동 조정 */
+    text-align: center; /* 가운데 정렬 */
+  }
+}
+
 @font-face {
   font-family: 'ONEMobile';
   src: url('/assets/fonts/ONEMobileBold.ttf') format('truetype');
