--- a/my-project2/frontend/src/app/component/result/result.component.html
+++ b/my-project2/frontend/src/app/component/result/result.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content style="height: calc(70vh - 200px); overflow-y: auto; display: flex; justify-content: center; align-items: center;">
 <!--  <img [src]="data.combinedImage" alt="결과 이미지" style="width: 100%; max-height: 100%; object-fit: contain;">-->
 <div *ngIf="imageExists">
-  <img [src]="imagePath" alt="결과 이미지" style="height: calc(50vh); width: 100%; object-fit: contain;">
+  <img [src]="generatedIMG" alt="결과 이미지" style="height: calc(50vh); width: 100%; object-fit: contain;">
 </div>
 <div *ngIf="!imageExists">
   <img id="spinner" src="assets/spinner.gif" alt="로딩" style="height: calc(50vh); width: 100%; object-fit: contain;">
