--- a/my-project2/frontend/src/app/component/member/closet/closet.component.html
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.html
@@ -2,7 +2,7 @@
 <div class="boxes-wrapper">
     <ng-container *ngFor="let post of posts; let postIndex = index">
       <div class="box">
-        <img [src]="'http://localhost:8080/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="d-block w-100"/>
+        <img [src]="'http://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="d-block w-100"/>
         <div class="button-group">
           <button (click)="previous(postIndex)"><</button>
           <button (click)="next(postIndex, post.imagePaths.length)">></button>
