스타일 변형
사이즈 변형

--- a/my-project2/frontend/src/styles.css
+++ b/my-project2/frontend/src/styles.css
@@ -68,8 +68,13 @@ body {
 .preview{
   height: 600px;
   width:450px;
-  padding: 5px;
+  padding: 10px;
   border-radius: 11%;
+
+  width: 100%; 
+  height: auto; 
+  min-width: 270px; 
+  min-height: 270px;
 
 }
 
