--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -1,21 +1,21 @@
-/*세로 컨텐츠 반응형 처리*/
-.wrapper{
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-
-}
-
 /*메뉴 author 태그 스타일 지정, 최초: 화이트, 클릭: 회색*/
-a{
-  text-decoration: none;
-  color: white;
+
+.description{
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+  background-color: white;
+
 }
 
-a:hover, a:active{
-  color: white;
+.app-data{
+  width:100%;
+  min-height: 2200px;
 }
-
 /*상단 메뉴 스타일 지정*/
 .navigation-items{
   list-style: none;
@@ -34,39 +34,77 @@ a:hover, a:active{
   width: 40%;
 }
 
+.TopNav{
+  width: 100%;
+  position:sticky;
+  top:0;
+  height: 60px;
+  border-bottom: solid 4px black;
+  z-index: 1;
+  background-color: white;
+}
+
+#BottomNav{
+  border-top: solid 3px black;
+  display: flex;
+  justify-content: space-around;
+  position:sticky;
+  bottom:0;
+  width: 100%;
+  height: 150px;
+  z-index: 1;
+  background-color: white;
+}
+
+
+.NavBox{
+  float: left;
+  padding: auto;
+
+}
+
+
+.BottomNavIcon{
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+
+}
+
+.BottomNavText{
+  color: black;
+  text-align: center;
+  font-size:24px;
+}
+
+
 /*풋터 스타일 지정*/
 footer{
   padding: 10px 0 10px 0;
   font-size: 12px;
   line-height: 20px;
-  background: black;
-  color: white;
+  background: white;
+  color: black;
   text-align: center;
 }
 
 .mat-toolbar.mat-primary {
-  background: black;
-  color: white;
+  background: white;
+  color: black;
 }
 
 .label1{
   font-size: 15px;
+  color: black;
 }
 
 .label2{
   font-size: 12px;
+  color: black;
 }
 
 .hide{
   display: none;
 }
 
-.description{
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
-  min-height: 1200px;
-  background-color: white;
-
-}
 
