메인 페이지 양식 구성
양식 구성 일부 변경

--- a/my-project2/frontend/src/app/app.component.html
+++ b/my-project2/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class = "description" >
   <div *ngIf="TopNav" class="TopNav">
-      <a  [routerLink]="['/']">
-        <div class="label2">홈</div>
+      <a [routerLink]="['/']">
+        <div class="Title">TryOnMe</div>
       </a>
       <serch-bar>
       </serch-bar>
