디자인 핸드폰용으로 %형식으로 어느 정도 변경

--- a/my-project2/frontend/src/app/component/community/community.component.html
+++ b/my-project2/frontend/src/app/component/community/community.component.html
@@ -10,7 +10,7 @@
       <img [src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="d-block w-100"/>
       <!-- Previous and Next Buttons -->
       <div class="button">
-        <button (click)="previous(postIndex)" class="overlay-button"><</button>
+        <button (click)="previous(postIndex)" class="overlay-button"></button>
         <button (click)="next(postIndex, post.imagePaths.length)"class="overlay-button">></button>
       </div>
       <h2>{{ post.username }}</h2>
