--- a/my-project2/frontend/src/app/component/home.component.css
+++ b/my-project2/frontend/src/app/component/home.component.css
@@ -3,7 +3,6 @@
 }
 
 .category{
-  margin: 20px;
 
   margin-top: 40px;
   margin-bottom: 40px;
@@ -11,57 +10,70 @@
 }
 
 .categoryName{
-  width: 100%;
   font-size: 24px;
   margin: 15px;
   margin-bottom: 30px;
 }
 
-.product{
-  flex:1;
+.product, .post, .propose{
+
 }
 
 .itemList{
+  flex:1;
   display: flex;
   justify-content: space-between;
   text-align: center;
 }
 
+.imgContainer{
+  width: 100%;
+  height: 18vh;
+  max-height: 240px;
 
-.productImg{
-  width: 220px;
-  height: px;
+}
+
+
+
+.postImg, .productImg, .proposeImg{
+  width: 100%;
+  height:100%;
   border-radius:11%;
+   /* 이미지가 너무 크거나 작은 경우에 대비하여 object-fit을 사용합니다 */
+}
+
+.brand, .propose, .post, .product{
+  width: 18%;
   
 }
 
-.brandContainer{
-  width: 220px;
-  height: 110px;
-  border-radius:11%;
 
-  background-color: #EFEFEF;
+
+.brandContainer{
+  width: 100%;
+  height: 7vh;
+  min-height: 60px;
+  border-radius:11%;
   display: flex;
+  background-color: #EFEFEF;
   align-items: center;
   justify-content: center;
 }
+
+
+
+
+
+@media (min-height: 1600px) {
+  .brandContainer {
+    height: 110px;
+  }
+}
+
 .brandImg{
   width: 80%;
   height: 80%;
   object-fit: contain;
-}
-
-.postImg{
-  width: 220px;
-  height: 240px;
-  border-radius:11%;
-}
-
-.proposeImg{
-  width: 220px;
-  height: 240px;
-
-  border-radius:11%;
 }
 
 .headerWrap{
