--- a/my-project2/frontend/src/app/app.component.html
+++ b/my-project2/frontend/src/app/app.component.html
@@ -25,14 +25,13 @@
       </div>
       
     </a>
-    <a  [routerLink]="['/signin']" routerLinkActive="router-link-active" *ngIf="!signService.isSignIn()">
-      
+    <a  [routerLink]="['/signin']" routerLinkActive="router-link-active" *ngIf="signService.isSignIn()">
       <div class="NavBox">
         <img class=BottomNavIcon src='/assets/clothesSample.png'>
         <div class="BottomNavText">로그인</div>
       </div>
     </a>
-    <a  [routerLink]="['/myinfo']" routerLinkActive="router-link-active" *ngIf="signService.isSignIn()">
+    <a  [routerLink]="['/myinfo']" routerLinkActive="router-link-active" *ngIf="!signService.isSignIn()">
       <div class="NavBox">
         <img class=BottomNavIcon src='/assets/clothesSample.png'>
         <div class="BottomNavText">마이</div>
