--- a/my-project2/frontend/src/app/component/home.component.html
+++ b/my-project2/frontend/src/app/component/home.component.html
@@ -9,7 +9,9 @@
   <div class="categoryName">인기 상품</div>
   <div class="itemList">
     <div class="product" *ngFor="let post of [1,2,3,4]">
-      <img class=productImg src="/assets/4.jpg">
+      <div class="imgContainer">
+        <img class=productImg src="/assets/4.jpg">
+      </div>
       <div class="productName">
         예시 상품 
       </div>
@@ -19,7 +21,10 @@
     </div>
 
     <div class="product" >
-      <img class=productImg src="">
+      <div class="imgContainer">
+        <img class=productImg src="">
+      </div>
+
       <div class="productName">
       예시 입력 
       </div>
@@ -32,11 +37,13 @@
   <div class="categoryName">인기 글</div>
   <div class="itemList">
     <div class="post" *ngFor="let post of [1,2,3,4,5]" >
-      <img class=postImg [src]="'/assets/brand/'+post+'.png'">
-      <div class="postName">
-        예시 브랜드 
+      <div class="imgContainer">
+        <img class=postImg [src]="'/assets/brand/'+post+'.png'">  
       </div>
-      <div class="brandtext">
+      <div class="postName">
+        예시 포스트
+      </div>
+      <div class="postText">
         하트나 해시태그 같은 정보들 있으면 추가
       </div>
     </div>
@@ -49,7 +56,7 @@
   <div class="categoryName">인기 브랜드</div>
   <div class="itemList">
     <div class="brand" *ngFor="let brand of brands1" >
-      <div class="brandContainer">
+      <div class="imgContainer" class="brandContainer">
         <img class=brandImg [src]="'/assets/brand/'+brand.path+'.png'">
 
       </div>
@@ -60,11 +67,11 @@
   </div>
   <div class="itemList">
     <div class="brand" *ngFor="let brand of brands2" >
-      <div class="brandContainer">
+      <div class="imgContainer"  class="brandContainer">
         <img class=brandImg [src]="'/assets/brand/'+brand.path+'.png'">
       
       </div>
-      
+
       <div class="brandName">
         {{brand.name}}
       </div>
@@ -81,9 +88,11 @@
   <div class="categoryName">추천 의류</div>
   <div class="itemList">
     <div class="propose" *ngFor="let post of [1,2,3,4,5]" >
-      <img class=proposeImg src="/assets/4.jpg">
+      <div class="imgContainer">
+        <img class=proposeImg src="/assets/4.jpg">
+      </div>
       <div class="proposeName">
-        예시 브랜드 
+        예시 의류
       </div>
       <div class="proposetext">
         멘트 있으면 추가
