--- a/my-project2/frontend/src/app/component/home.component.css
+++ b/my-project2/frontend/src/app/component/home.component.css
@@ -27,16 +27,19 @@
 }
 
 .imgContainer{
+  position: relative;
   width: 100%;
-  height: 18vh;
-  max-height: 240px;
+  padding-bottom: 120%; /* 이 부분이 가로 세로 비율을 동일하게 유지합니다 */
 
 }
 
 
 
 .postImg, .productImg, .proposeImg{
-  width: 100%;
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
   height:100%;
   border-radius:11%;
    /* 이미지가 너무 크거나 작은 경우에 대비하여 object-fit을 사용합니다 */
@@ -44,37 +47,41 @@
 
 .brand, .propose, .post, .product{
   width: 18%;
-  
 }
 
 
+.brandImg{
+
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  
+  
+  margin:auto;
+
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
+}
 
 .brandContainer{
+  position:relative;
   width: 100%;
-  height: 7vh;
-  min-height: 60px;
-  border-radius:11%;
+  padding-bottom: 60%;
+}
+
+.brandDiv{
+  position:absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
+  border-radius:11%;
   background-color: #EFEFEF;
   align-items: center;
   justify-content: center;
 }
 
-
-
-
-
-@media (min-height: 1600px) {
-  .brandContainer {
-    height: 110px;
-  }
-}
-
-.brandImg{
-  width: 80%;
-  height: 80%;
-  object-fit: contain;
-}
 
 .headerWrap{
   position: relative;
