--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -52,7 +52,8 @@ a{
   width: 100%;
   position:sticky;
   top:0;
-  height: 80px;
+  height: 6vh;
+  max-height: 60px;
   border-bottom: solid 4px black;
   z-index: 1;
   background-color: white;
@@ -61,28 +62,35 @@ a{
 #BottomNav{
   border-top: solid 3px black;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   position:sticky;
-  bottom:0;
   width: 100%;
-  height: 150px;
+  bottom:0;
+  height: 10vh;
+  max-height: 140px;
   z-index: 1;
   background-color: white;
+  display: flex;
 }
 
+
+#BottomNav> a{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
 
 .NavBox{
-  float: left;
-  padding: auto;
-
+  flex:1;
+  height: 100%;
 }
-
-
 .BottomNavIcon{
-  width: 100px;
-  height: 100px;
-  padding: 10px;
-
+  width: 100%;
+  height: calc(100% - 36px);
+  object-fit: contain;
 }
 
 .BottomNavText{
