--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -1,16 +1,18 @@
+
 /*메뉴 author 태그 스타일 지정, 최초: 화이트, 클릭: 회색*/
-
-
-.description{
+.app{
   display: flex;
   position: relative;
   flex-wrap: wrap;
-
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
-  background-color: white;
+}
 
+.description{
+  background-color: white;
+  min-height: 100vh;
+  overflow-y: auto; 
 }
 
 
@@ -18,59 +20,40 @@
   font-size: 36px;
 }
 
-
 a{
   text-decoration: none;
   color: black;
 }
 
-
-
-.app-data{
-  width:100%;
-  min-height: 2200px;
-}
-/*상단 메뉴 스타일 지정*/
-.navigation-items{
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-}
-
-/*상단 메뉴 아이콘 스타일 지정*/
-.icon{
-  display: inline-block;
-  height: 22px;
-  margin-bottom: 2px;
-  margin-right: 2px;
-  vertical-align: middle;
-  width: 40%;
-}
-
-.TopNav{
+.TopNav, #BottomNav{
   width: 100%;
   position:sticky;
+  z-index: 1;
+  background-color: white;
+}
+
+
+.TopNav{
+
+  text-align: left;
   top:0;
   height: 6vh;
   max-height: 60px;
   border-bottom: solid 4px black;
-  z-index: 1;
-  background-color: white;
+
 }
 
 #BottomNav{
+  bottom:0;
+  left:0;
+  width: 100%;
+  height: 6vh;
   border-top: solid 3px black;
   display: flex;
   justify-content: space-between;
-  position:sticky;
-  width: 100%;
-  bottom:0;
-  height: 10vh;
   max-height: 140px;
-  z-index: 1;
+  z-index: 1; 
   background-color: white;
-  display: flex;
 }
 
 
@@ -81,6 +64,14 @@ a{
   align-items: center;
   justify-content: center;
   height: 100%;
+}
+
+@media (max-width:480px) {
+  #BottomNav{
+    height: 55px;
+    font-size: 14px;
+  }
+
 }
 
 .NavBox{
