--- a/my-project2/frontend/src/styles.css
+++ b/my-project2/frontend/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
+.app{
+  text-align: center;
+}
 a{
   text-decoration: none;
   color: white;
